# rpi2350

./: README.md  build.sh
firmware/: CMakeLists.txt
firmware/src/: CMakeLists.txt  main.c  tusb_config.h  usb_descriptors.c
